crates/shuffle/src/slice/snapshots/shuffle__slice__state__test__constraint_state.snap
---
source: crates/shuffle/src/slice/state.rs
expression: "trace.join(\"\\n\")"
---
Blocked -> INITIAL, broadcast: false
Tailing -> Tailing, broadcast: true
Tailing -> Tailing, broadcast: false
Blocked -> At(101), broadcast: true
Ready(150) -> At(150), broadcast: true
Ready(50) -> At(101), broadcast: true
Blocked -> At(101), broadcast: false
Blocked +flush -> At(101), broadcast: true
Blocked -> At(101), broadcast: false
Blocked -> At(71), broadcast: true
Blocked +flush -> At(71), broadcast: true
Blocked -> At(71), broadcast: false
Ready(40) -> At(40), broadcast: true
