crates/shuffle/src/slice/snapshots/shuffle__slice__state__test__extract_causal_hints_round_trip.snap
---
source: crates/shuffle/src/slice/state.rs
expression: entries
---
[
    (
        "acmeCo/anvils/part=a/pivot=00",
        0,
        [
            (
                Producer(01:00:00:00:00:00),
                Clock(0s 16ns),
            ),
            (
                Producer(03:00:00:00:00:00),
                Clock(0s 32ns),
            ),
            (
                Producer(03:00:00:00:00:00),
                Clock(0s 32ns),
            ),
        ],
    ),
    (
        "acmeCo/bananas/pivot=00",
        1,
        [
            (
                Producer(01:00:00:00:00:00),
                Clock(0s 16ns),
            ),
        ],
    ),
]
