crates/shuffle/src/slice/snapshots/shuffle__slice__state__test__flush_state_machine.snap
---
source: crates/shuffle/src/slice/state.rs
expression: "&s.progress.flushed"
---
Frontier {
    journals: [
        JournalFrontier {
            journal: "test/journal/A",
            binding: 0,
            producers: [
                ProducerFrontier {
                    producer: Producer(01:00:00:00:00:00),
                    last_commit: Clock(100s 0ns),
                    hinted_commit: Clock(0s 0ns),
                    offset: -50,
                },
                ProducerFrontier {
                    producer: Producer(03:00:00:00:00:00),
                    last_commit: Clock(200s 0ns),
                    hinted_commit: Clock(0s 0ns),
                    offset: -100,
                },
            ],
            bytes_read_delta: 0,
            bytes_behind_delta: 0,
        },
    ],
    flushed_lsn: [
        0/100,
        0/200,
        0/300,
    ],
    latest_backfill_begin: {},
    latest_backfill_complete: {},
    binding_gap_floors: {},
    unresolved_hints: 0,
}
